Update dom-with create dhtml.html

--- a/dom-with create dhtml.html
+++ b/dom-with create dhtml.html
@@ -64,8 +64,11 @@
             <figcaption>roadtax:10%</figcaption>
         </figure>
     </section>     -->
-    <input type="text" id="inputBox" placeholder="Type anything...">
-<p id="status"></p>
+   <button id="btn">click customer name</button>
+    <ul>
+        
+    </ul>
     <script src="scripts.js"></script>
 </body>
+
 </html>
