advance array methods

--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>error handling
-
-    </title>
+    <title>Document</title>
 </head>
+
 <body>
-    <script src="script.js"></script>
+    <script>
+        /*map this map method is used to to give the output into the new array is called map
+        let arr=[2,3,4]
+        let res=arr.map(n=>n*2)
+        console.log(res)
+        */
+        /*filter is it check the condition that true values print in the new array
+        let arr=[2,3,4]
+        let res=arr.filter(n=>n%2==0)
+        console.log(res)
+        */
+        /*find it is used to to find something in the array it when it finds one it does not goes to next interate 
+        let arr=[2,3,4]
+        let res=arr.find(n=>n>2)
+        console.log(res)
+        */
+        /* reduce    
+        let nums = [1, 2, 3, 4];
+        let sum = nums.reduce((acc, curr) => acc + curr, 5);
+        console.log(acc); // 10
+        */
+        //  	
+        // every()	✅ Returns true only if all elements match condition
+        //         let nums = [2, 4, 6];
+    //console.log(nums.every(n => n % 2 === 0)); // true
+
+    // some ✅ Returns true if at least one element matches condition
+
+    let nums = [2, 4, 5];
+    console.log(nums.some(n => n % 2 === 0)); 
+
+
+
+    </script>
 </body>
+
 </html>
