--- a/carousel.html
+++ b/carousel.html
@@ -12,7 +12,7 @@
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      margin: 0px;
+      margin: 0;
     }
 
     section {
@@ -106,4 +106,5 @@
 
 </body>
 </html>
+
 
